k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-registration
  namespace: patient-registration
  labels:
    app: patient-registration
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-registration
      tier: backend
  template:
    metadata:
      labels:
        app: patient-registration
        tier: backend
    spec:
      containers:
      - name: patient-registration
        image: patient-registration:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 10
