k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-registration
  namespace: patient-registration
  labels:
    app: patient-registration
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: patient-registration
    tier: backend
